[JENKINS-70528] Showing that a fix is possible with coöperation from `workflow-basic-steps`